# league-a-lot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  netlify.toml  shell.nix
src/: lib.rs  main.rs
static/: dark.css  darkmode.js  index.html  light.css  plot.js  style.css  table.js
