[package]
name = "league-a-lot"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
chrono = "0.4"
once_cell = "1.5"
rand = "0.8.3"
riven = "1.11"
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.12"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.6"
