[package]
name = "league-a-lot"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
rand = "0.8.5"
riven = "2.7"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.5.13"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
